--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,21 @@
+/* font Barlow  */
+@import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
 
 @import "tailwindcss";
 @plugin "flowbite-react/plugin/tailwindcss";
 @source "../.flowbite-react/class-list.json";
 
+/* font family 
+
+*/
+
+
+.barlow {
+  font-family: "Barlow", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+}
 /* For Error page .css */
 .fade-in {
   animation: fadeIn 1s ease-out forwards;
@@ -17,4 +30,8 @@
     opacity: 1;
     transform: translateX(20px);
   }
+}
+.active{
+    border-bottom: 2px solid rgb(164, 235, 164);
+    border-radius: 10px;
 }
